Bootstrapping database before migrations

--- a/SimpleAPI/appsettings.json
+++ b/SimpleAPI/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "PersonConnection": "Server:localhost,5432;Initial Catalog=PersonDB;User ID=admin;Password=admin;"
+  }
 }
