--- a/SimpleAPI/appsettings.json
+++ b/SimpleAPI/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "PersonConnection": "Server:localhost,5432;Initial Catalog=PersonDB;User ID=admin;Password=admin;"
+    "PersonConnection": "Server=localhost;Port=5432;Database=PersonDB;User ID=admin;Password=admin;"
   }
 }
