--- a/MicroservicesCommunication/K8S/postgres-plat-depl.yaml
+++ b/MicroservicesCommunication/K8S/postgres-plat-depl.yaml
@@ -27,31 +27,4 @@ spec:
       volumes:
         - name: postgredb
           persistentVolumeClaim:
-            claimName: postgres-pv-claim
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: postgres-clusterip-srv
-spec:
-  type: ClusterIP
-  selector:
-    app: postgres
-  ports:
-  - name: postgres
-    protocol: TCP
-    port: 5432
-    targetPort: 5432
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: postgres-loadbalancer
-spec:
-  type: LoadBalancer
-  selector:
-    app: postgres
-  ports:
-  - protocol: TCP
-    port: 5432
-    targetPort: 5432
+            claimName: postgres-pvc
