--- a/MicroservicesCommunication/PlatformService/appsettings.Development.json
+++ b/MicroservicesCommunication/PlatformService/appsettings.Development.json
@@ -1,9 +1,12 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "CommandService": "http://localhost:6000/api/c/Platforms/",
+    "ConnectionStrings": {
+        "PlatformsConnection": "Server=localhost;Port=5432;Database=platformsdb;User ID=admin;Password=test123;"
     }
-  },
-  "CommandService": "http://localhost:6000/api/c/Platforms/"
 }
