--- a/MicroservicesCommunication/PlatformService/appsettings.Production.json
+++ b/MicroservicesCommunication/PlatformService/appsettings.Production.json
@@ -1,3 +1,6 @@
 ﻿{
-    "CommandService": "http://commands-clusterip-srv:80/api/c/Platforms/"
+    "CommandService": "http://commands-clusterip-srv:80/api/c/Platforms/",
+    "ConnectionStrings": {
+        "PlatformsConnection": "Server=postgres-clusterip-srv;Port=5432;Database=platformsdb;User ID=admin;Password=test123;"
+    }
 }
