--- a/MicroservicesCommunication/PlatformService/PlatformService.csproj
+++ b/MicroservicesCommunication/PlatformService/PlatformService.csproj
@@ -16,6 +16,7 @@
     </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="6.0.8" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.8" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="6.0.7" />
   </ItemGroup>
 
   <ItemGroup>
@@ -31,6 +32,8 @@
     <None Remove="Profiles\" />
     <None Remove="SyncDataServices\" />
     <None Remove="SyncDataServices\Http\" />
+    <None Remove="Npgsql.EntityFrameworkCore.PostgreSQL" />
+    <None Remove="Migrations\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Models\" />
@@ -40,5 +43,6 @@
     <Folder Include="Profiles\" />
     <Folder Include="SyncDataServices\" />
     <Folder Include="SyncDataServices\Http\" />
+    <Folder Include="Migrations\" />
   </ItemGroup>
 </Project>
