--- a/MicroservicesCommunication/PlatformService/appsettings.Development.json
+++ b/MicroservicesCommunication/PlatformService/appsettings.Development.json
@@ -8,6 +8,8 @@
     "CommandService": "http://localhost:6000/api/c/Platforms/",
     "ConnectionStrings": {
         "PlatformsConnection": "Server=localhost;Port=5432;Database=platformsdb;User ID=admin;Password=test123;"
-    }
+    },
+    "RabbitMQHost": "localhost",
+    "RabbitMQPort": "5672"
 }
     
