--- a/MicroservicesCommunication/PlatformService/appsettings.Production.json
+++ b/MicroservicesCommunication/PlatformService/appsettings.Production.json
@@ -2,5 +2,7 @@
     "CommandService": "http://commands-clusterip-srv:80/api/c/Platforms/",
     "ConnectionStrings": {
         "PlatformsConnection": "Server=postgres-clusterip-srv;Port=5432;Database=platformsdb;User ID=admin;Password=test123;"
-    }
+    },
+    "RabbitMQHost": "rabbitmq-clusterip-srv",
+    "RabbitMQPort": "5672"
 }
