--- a/MicroservicesCommunication/CommandService/appsettings.Production.json
+++ b/MicroservicesCommunication/CommandService/appsettings.Production.json
@@ -1,10 +1,4 @@
 {
-    "Logging": {
-        "LogLevel": {
-            "Default": "Information",
-            "Microsoft.AspNetCore": "Warning"
-        }
-    },
-    "RabbitMQHost": "localhost",
+    "RabbitMQHost": "rabbitmq-clusterip-srv",
     "RabbitMQPort": "5672"
 }
