--- a/MicroservicesCommunication/PlatformService/appsettings.Production.json
+++ b/MicroservicesCommunication/PlatformService/appsettings.Production.json
@@ -4,5 +4,17 @@
         "PlatformsConnection": "Server=postgres-clusterip-srv;Port=5432;Database=platformsdb;User ID=admin;Password=test123;"
     },
     "RabbitMQHost": "rabbitmq-clusterip-srv",
-    "RabbitMQPort": "5672"
+    "RabbitMQPort": "5672",
+    "Kestrel": {
+        "Endpoints": {
+            "Grpc": {
+                "Protocols": "Http2",
+                "Url": "http://platforms-clusterip-srv:666"
+            },
+            "webApi": {
+                "Protocols": "Http1",
+                "Url": "http://platforms-clusterip-srv:80"
+            }
+        }
+    }
 }
