Finishing the course

--- a/MicroservicesCommunication/CommandService/appsettings.Development.json
+++ b/MicroservicesCommunication/CommandService/appsettings.Development.json
@@ -7,5 +7,5 @@
     },
     "RabbitMQHost": "localhost",
     "RabbitMQPort": "5672",
-    "GrpcPlatform": "https://localhost:7052"
+    "GrpcPlatform": "http://localhost:5100"
 }
