implement Basket using repository pattern + Redis working

--- a/MicroservicesEcommerce/src/Services/Basket.API/Basket.API.csproj
+++ b/MicroservicesEcommerce/src/Services/Basket.API/Basket.API.csproj
@@ -8,6 +8,20 @@
 
   <ItemGroup>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
+    <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="6.0.10" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Remove="Microsoft.Extensions.Caching.StackExchangeRedis" />
+    <None Remove="Newtonsoft.Json" />
+    <None Remove="Entities\" />
+    <None Remove="Repositories\" />
+    <None Remove="Controllers\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Entities\" />
+    <Folder Include="Repositories\" />
+    <Folder Include="Controllers\" />
+  </ItemGroup>
 </Project>
