adding Docker support for Basket.API

--- a/MicroservicesEcommerce/src/docker-compose.yml
+++ b/MicroservicesEcommerce/src/docker-compose.yml
@@ -4,12 +4,21 @@ services:
   catalogdb:
     image: mongo
 
+  basketdb:
+    image: redis:alpine  
+
   catalog.api:
     image: ${DOCKER_REGISTRY-}catalog
     build:
       context: .
       dockerfile: Services/Catalog.API/Dockerfile
 
+
+  basket.api:
+    image: ${DOCKER_REGISTRY-}basket
+    build:
+      context: .
+      dockerfile: Services/Basket.API/Dockerfile
 
 volumes:
   mongo_data:
