--- a/MicroservicesEcommerce/src/docker-compose.yml
+++ b/MicroservicesEcommerce/src/docker-compose.yml
@@ -7,6 +7,9 @@ services:
   basketdb:
     image: redis:alpine  
 
+  portainer:
+    image: portainer/portainer-ce  
+
   catalog.api:
     image: ${DOCKER_REGISTRY-}catalog
     build:
@@ -22,3 +25,4 @@ services:
 
 volumes:
   mongo_data:
+  portainer_data:  
