--- a/MicroservicesEcommerce/src/docker-compose.override.yml
+++ b/MicroservicesEcommerce/src/docker-compose.override.yml
@@ -22,7 +22,7 @@ services:
       - POSTGRES_PASSWORD=admin1234
       - POSTGRES_DB=DiscountDb
     restart: always
-    ports:
+    ports:©
         - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data/
