Migrating data from Discount API + support to Docker

--- a/MicroservicesEcommerce/src/Services/Discount.API/Discount.API.csproj
+++ b/MicroservicesEcommerce/src/Services/Discount.API/Discount.API.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <DockerComposeProjectPath>../../docker-compose.dcproj</DockerComposeProjectPath>
   </PropertyGroup>
 
   <ItemGroup>
@@ -18,10 +19,12 @@
     <None Remove="Repositories\" />
     <None Remove="Npgsql" />
     <None Remove="Dapper" />
+    <None Remove="Data\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Controllers\" />
     <Folder Include="Entities\" />
     <Folder Include="Repositories\" />
+    <Folder Include="Data\" />
   </ItemGroup>
 </Project>
