--- a/MicroservicesEcommerce/src/docker-compose.override.yml
+++ b/MicroservicesEcommerce/src/docker-compose.override.yml
@@ -22,7 +22,7 @@ services:
       - POSTGRES_PASSWORD=admin1234
       - POSTGRES_DB=DiscountDb
     restart: always
-    ports:©
+    ports:
         - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data/
@@ -69,3 +69,12 @@ services:
     ports:
       - "8001:80"
 
+  discount.api:
+    container_name: discount.api
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+      - "DatabaseSettings:ConnectionString=Server=discountdb;Port=5432;Database=DiscountDb;User Id=admin;Password=admin1234;"
+    depends_on:
+      - discountdb
+    ports:
+      - "8002:80"
