--- a/MicroservicesEcommerce/src/Services/Catalog.API/Catalog.API.csproj
+++ b/MicroservicesEcommerce/src/Services/Catalog.API/Catalog.API.csproj
@@ -7,6 +7,9 @@
     <DockerComposeProjectPath>../../docker-compose.dcproj</DockerComposeProjectPath>
   </PropertyGroup>
 
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+    <WarningLevel>4</WarningLevel>
+  </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
     <PackageReference Include="MongoDB.Driver" Version="2.18.0" />
