--- a/MicroservicesEcommerce/src/docker-compose.override.yml
+++ b/MicroservicesEcommerce/src/docker-compose.override.yml
@@ -48,7 +48,6 @@ services:
         - /var/run/docker.sock:/var/run/docker.sock
         - portainer_data:/data
 
-
   catalog.api:
     container_name: catalog.api
     environment:
@@ -64,6 +63,7 @@ services:
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
       - "CacheSettings:ConnectionString=basketdb:6379"
+      - "GrpcSettings:DiscountUrl=http://discount.grpc"
     depends_on:
       - basketdb
     ports:
@@ -78,3 +78,14 @@ services:
       - discountdb
     ports:
       - "8002:80"
+
+  discount.grpc:
+    container_name: discount.grpc
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+      - "DatabaseSettings:ConnectionString=Server=discountdb;Port=5432;Database=DiscountDb;User Id=admin;Password=admin1234;"
+    depends_on:
+      - discountdb
+    ports:
+      - "8003:80"
+
