--- a/MicroservicesEcommerce/src/docker-compose.yml
+++ b/MicroservicesEcommerce/src/docker-compose.yml
@@ -34,8 +34,15 @@ services:
       context: .
       dockerfile: Services/Discount.API/Dockerfile
 
+  discount.grpc:
+    image: ${DOCKER_REGISTRY-}discount
+    build:
+      context: .
+      dockerfile: Services/Discount.Grpc/Dockerfile
+
 volumes:
   mongo_data:
   portainer_data:
   postgres_data:
   pgadmin_data:
+
