--- a/MicroservicesEcommerce/src/Services/Ordering.API/appsettings.json
+++ b/MicroservicesEcommerce/src/Services/Ordering.API/appsettings.json
@@ -1,10 +1,18 @@
 ﻿{
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+    "ConnectionStrings": {
+        "OrderingConnectionString": "Server=localhost;Database=OrderDb;User Id=sa;Password=SwN12345678;"
+    },
+    "EmailSettings": {
+        "FromAddress": "test@gmail.com",
+        "ApiKey": "",
+        "FromName": "Test"
+    },
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*"
 }
 
